[package]
name = "TodoList_Yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = "1.0.136"
serde_derive = "1.0.136"
gloo = "0.6"
strum = "0.23"
strum_macros = "0.23"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
